; ModuleID = '/home/carl/AnghaBench/Craft/src/extr_matrix.c_normalize.c'
source_filename = "/home/carl/AnghaBench/Craft/src/extr_matrix.c_normalize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @normalize(float* %0, float* %1, float* %2) #0 {
  %4 = alloca float*, align 8
  %5 = alloca float*, align 8
  %6 = alloca float*, align 8
  %7 = alloca float, align 4
  store float* %0, float** %4, align 8
  store float* %1, float** %5, align 8
  store float* %2, float** %6, align 8
  %8 = load float*, float** %4, align 8
  %9 = load float, float* %8, align 4
  %10 = load float*, float** %4, align 8
  %11 = load float, float* %10, align 4
  %12 = fmul float %9, %11
  %13 = load float*, float** %5, align 8
  %14 = load float, float* %13, align 4
  %15 = load float*, float** %5, align 8
  %16 = load float, float* %15, align 4
  %17 = fmul float %14, %16
  %18 = fadd float %12, %17
  %19 = load float*, float** %6, align 8
  %20 = load float, float* %19, align 4
  %21 = load float*, float** %6, align 8
  %22 = load float, float* %21, align 4
  %23 = fmul float %20, %22
  %24 = fadd float %18, %23
  %25 = call float @sqrtf(float %24) #2
  store float %25, float* %7, align 4
  %26 = load float, float* %7, align 4
  %27 = load float*, float** %4, align 8
  %28 = load float, float* %27, align 4
  %29 = fdiv float %28, %26
  store float %29, float* %27, align 4
  %30 = load float, float* %7, align 4
  %31 = load float*, float** %5, align 8
  %32 = load float, float* %31, align 4
  %33 = fdiv float %32, %30
  store float %33, float* %31, align 4
  %34 = load float, float* %7, align 4
  %35 = load float*, float** %6, align 8
  %36 = load float, float* %35, align 4
  %37 = fdiv float %36, %34
  store float %37, float* %35, align 4
  ret void
}

; Function Attrs: nounwind
declare dso_local float @sqrtf(float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
